--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: enomosphere
 <html>
     <h1>ひよこっ！</h1>
     <ul>
-        {% for post in site.posts %}
+        {% for post in site.posts limit:10 %}
         <li>
             <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
             <p>{{ post.excerpt }}</p>
